--- a/src/pages/day-page/day-page.html
+++ b/src/pages/day-page/day-page.html
@@ -3,7 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Page One</ion-title>
+        <ion-title>A day</ion-title>
     </ion-navbar>
 </ion-header>
 
