--- a/src/pages/week-page/week-page.html
+++ b/src/pages/week-page/week-page.html
@@ -15,5 +15,6 @@
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
   </p>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <day-component></day-component>
+  <day-component></day-component>
 </ion-content>
