--- a/src/pages/week-page/week-page.html
+++ b/src/pages/week-page/week-page.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
     <h3>WEEK</h3>
-    <h3>{{startDate}} - {{endDate}}</h3>
+    <h3>{{startDay.getDate()}} - {{endDay.getDate()}}</h3>
 
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
