--- a/src/pages/week-page/week-page.html
+++ b/src/pages/week-page/week-page.html
@@ -7,9 +7,11 @@
   </ion-navbar>
 </ion-header>
 
+<div class="week-wrapper"></div>
 <ion-content padding>
-    <h3>WEEK</h3>
-    <h3 class="days-in-week">{{startDay.getDate()}} - {{endDay.getDate()}}</h3>
+  <h3>WEEK</h3>
+  <h3 class="days-in-week">{{startDay.getDate()}} - {{endDay.getDate()}}</h3>
+
   <div style="text-align:right"><i class="fa fa-plus-circle fa-3x" (click)="addNewDay()"></i></div>
 
   <day-component *ngFor="let dayToDisplay of daysToDisplay" [date]="dayToDisplay" ></day-component>
