calendar in month-page, some rework

--- a/src/pages/home-page/home-page.html
+++ b/src/pages/home-page/home-page.html
@@ -9,6 +9,12 @@
 
 <ion-content padding>
   <h2>Home Page!</h2>
+  <div>
 
-  <button ion-button class="button-danger" (click)="newPage()" >This weeeeeeek</button>
+    <button ion-button class="button-primary" (click)="crtWeek()">This weeeeeeek</button>
+  </div>
+  <div>
+
+    <button ion-button class="button-primary" (click)="crtMonth()">This month</button>
+  </div>
 </ion-content>
