--- a/src/pages/week-page/week-page.html
+++ b/src/pages/week-page/week-page.html
@@ -8,7 +8,7 @@
   <div class="week-wrapper">
     <div class="week-header">
       <h1>WEEK</h1>
-      <h1 class="days-in-week">{{startDay.getDate()}} - {{endDay.getDate()}}</h1>
+      <h1 class="days-in-week">{{weekTitle}}</h1>
     </div>
 
   </div>
