--- a/src/pages/month-page/month-page.html
+++ b/src/pages/month-page/month-page.html
@@ -7,8 +7,13 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{pageHeader || "Month page"}}</ion-title>
+    <!--<ion-title><img src="/assets/img/logo_mic.png"></ion-title>-->
+    <ion-title>Journal in my Pocket</ion-title>
   </ion-navbar>
+  <div class="arrows-container">
+    <div class="right" (click)="goBack()"><i class="right fa fa-angle-left"></i></div>
+    <div class="left" (click)="goNext()" style="text-align:right;"><i class="right fa fa-angle-right"></i></div>
+  </div>
   <div class="month-wrapper">
     <div class="month-header">
       <h1 class="days-in-week">{{pageHeader}}</h1>
@@ -18,10 +23,7 @@
 
 
 <ion-content padding>
-  <div class="arrows-container">
-    <div class="right" (click)="goBack()"><</div>
-    <div class="left" (click)="goNext()">></div>
-  </div>
+
   <calendar [eventSource]="eventSource"
             [calendarMode]="calendar.mode"
             [currentDate]="calendar.currentDate"
