--- a/src/pages/journal-page/journal-page.html
+++ b/src/pages/journal-page/journal-page.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>journal-page</ion-title>
+    <ion-title>Journal</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,10 +16,10 @@
 <ion-content padding>
 
   <!--<div class="new-day-button">-->
-    <!--<i class="fa fa-plus-circle fa-3x"-->
-       <!--(click)="addNewDay()"-->
-       <!--[hidden]="!hiddenDays || !hiddenDays.length"></i></div>-->
+  <!--<i class="fa fa-plus-circle fa-3x"-->
+  <!--(click)="addNewDay()"-->
+  <!--[hidden]="!hiddenDays || !hiddenDays.length"></i></div>-->
 
-  <page-journal-page *ngFor="let je of journalEntries" ></page-journal-page>
+  <!--<journal-entry *ngFor="let je of journalEntries" [data]="je"></journal-entry>-->
 
 </ion-content>
